# zapgpt

./: .gitignore  .pre-commit-config-dev.yaml  .pre-commit-config-simple.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION_SYSTEM.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.example.json  gpt_usage.db  installation_check.py  pyproject.toml  requirements.txt  run_tests_in_docker.sh  setup-pre-commit.sh  setup.py  verify_install.py  zapgpt.py
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: burp-integration.md  zap-integration.md
example_prompts/: common_base.json  default.json  default.txt  file.txt  git.txt  powershell.json  prompting.json  vuln_assessment.json
prompts/: coding.txt  default.txt  file.txt  hacking.txt  prompting.txt
scripts/: run-quick-test.sh  run-tests.sh  run-verify.sh
tests/: __init__.py  conftest.py  test_api.py  test_automation_examples.py  test_cli.py  test_cli_module.py  test_config.py  test_config_safe.py  test_init.py  test_main.py  test_poml_format.poml  test_recent_features.py
zapgpt/: __init__.py  __main__.py  cli.py  config.py  default_pricing.json  main.py
zapgpt/prompts/: DataScientist.json  coding.json  common_base.json  create_passwd.json  ctf.json  cyber_awareness.json  kali.json  kalihacking.json  langchain.md  linux_log_analysis.json  linuxrootquest.json  my_social.json  poml.json  powershell.json  prompting.json  python.json  re.json  regex.json  trt.json
